@@ -381,13 +381,14 @@
     <File name="./Services/Tasks/Task.cs" subtype="Code" buildaction="Compile" dependson="" data="" />
     <File name="./Services/Tasks/TaskService.cs" subtype="Code" buildaction="Compile" dependson="" data="" />
     <File name="./Services/Toolbar/ToolbarService.cs" subtype="Code" buildaction="Compile" dependson="" data="" />
+    <File name="../../../data/resources/glade/Base.glade" subtype="Code" buildaction="EmbedAsResource" dependson="" data="" />
+    <File name="./Gui/Dialogs/CombineConfiguration/CombineBuildOptions.cs" subtype="Code" buildaction="Compile" dependson="" data="" />
   </Contents>
   <References>
     <Reference type="Gac" refto="System.Web.Services, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" localcopy="True" />
     <Reference type="Gac" refto="System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" localcopy="True" />
     <Reference type="Gac" refto="System.Data, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" localcopy="True" />
     <Reference type="Gac" refto="Mono.Posix, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" localcopy="True" />
-    <Reference type="Gac" refto="ICSharpCode.SharpZipLib, Version=0.31.0.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73" localcopy="True" />
     <Reference type="Gac" refto="gdk-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" localcopy="True" />
     <Reference type="Gac" refto="gecko-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=de14aa3cf4f97add" localcopy="True" />
     <Reference type="Gac" refto="glib-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" localcopy="True" />
@@ -397,6 +398,7 @@
     <Reference type="Gac" refto="gtk-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" localcopy="True" />
     <Reference type="Gac" refto="monodoc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" localcopy="True" />
     <Reference type="Gac" refto="pango-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" localcopy="True" />
+    <Reference type="Gac" refto="ICSharpCode.SharpZipLib, Version=0.6.0.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73" localcopy="True" />
   </References>
   <DeploymentInformation target="" script="" strategy="File" />
   <Configuration runwithwarnings="False" name="Debug">
